# sheerwater-benchmarking

./: .gitignore  .tflint.hcl  GEFS_README.md  LICENSE  README.md  gefs_etl_https.py  gefs_etl_s3.py  gefs_https_log_1.txt  gefs_https_log_2.txt  gefs_https_log_3.txt  gefs_s3_log_1.txt  gefs_s3_log_2.txt  pyproject.toml  requests-test.py  tf_fmt.sh
.github/workflows/: linting.yml  terraform-grafana-config.yml  terraform-grafana-main.yml
charts/applicationset/: Chart.yaml  values.yaml
charts/applicationset/templates/: applicationset.yaml
charts/ephemeral-grafana/: Chart.yaml  values.yaml
charts/ephemeral-grafana/templates/: NOTES.txt  _helpers.tpl  cert-copy-job.yaml  cert-copy-rbac.yaml  configmap.yaml  deployment.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
charts/ephemeral-grafana/templates/tests/: test-connection.yaml
dashboard_data_writers/: metrics_tables.py  prise_explorer.py  rainfall_data_explorer.py  spw_explorer.py
dashboard_table_writers/: rainfall_data_explorer.py  spw_explorer.py
dashboard_table_writers/rain_data_explorer/: spw_and_rain.py
dashboards/: build_dashboards.py  datasource_config.json  set_pr_config.py
dashboards/src/: Home.html  Home.py  forecast-eval-caveats.txt  forecast-eval-metric-desc.txt  forecast-evaluation-after-render.js  forecast-evaluation-monthly-precip.js  forecast-evaluation-monthly-temp.js  forecast-evaluation-weekly-precip.js  forecast-evaluation-weekly-temp.js  forecast-evaluation.py  k8-overview.py
dashboards/src/foundation-testing/: system_overview.py
dashboards/src/testing-scratch/: africa-precip-visualization.json  metrics-maps-copy.json  salient-v8-forecast-scorecard.json  summary-results-tables-w-timeseries.json
grafana_tables/: spw_and_rain.py
infrastructure/: .tflint.hcl  README.md  tf_fmt.sh
infrastructure/helm/sheerwater-benchmarking/: Chart.yaml  values.yaml
infrastructure/helm/sheerwater-benchmarking/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  grafana-certificate.yaml  grafana-deployment.yaml  grafana-ingress.yaml  grafana-pv.yaml  grafana-secret.yaml  grafana-service.yaml  hpa.yaml  ingress.yaml  oauth-redirect-certificate.yaml  oauth-redirect-ingress.yaml  postgres-deployment.yaml  postgres-pv.yaml  postgres-secret.yaml  postgres-service.yaml  service.yaml  serviceaccount.yaml  terracotta-certificate.yaml  terracotta-deployment.yaml  terracotta-ingress.yaml  terracotta-pv.yaml  terracotta-pvc.yaml  terracotta-secret.yaml  terracotta-service.yaml  terracotta-statefulset.yaml  terracotta-sync-cronjob.yaml  timescale-deployment.yaml  timescale-pv.yaml  timescale-secret.yaml  timescale-service.yaml
infrastructure/terraform/: .terraform.lock.hcl  argo-applicationset.tf  delete-pv-pvc.sh  main.tf  variables.tf
infrastructure/terraform-config/: .terraform.lock.hcl  dashboards.tf  import.sh  main.tf  outputs.tf  reset_workspace.sh  wait-for-grafana.sh
infrastructure/terraform-database/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  variables.tf
infrastructure/terraform-database-config/: main.tf
infrastructure/terraform-grafana-config/: .terraform.lock.hcl  main.tf
infrastructure/terraform-grafana-datasources/: .terraform.lock.hcl  main.tf
jobs/: __init__.py  check_forecast_validity.py  check_function.py  gen_climatology.py  gen_ecmwf_hres.py  gen_emcwf.py  gen_emcwf_er.py  gen_masks.py  gen_reanalysis.py  gen_salient_forecast.py  job_utils.py  run_all_metrics.py  run_biweekly_table_metrics.py  run_global_metrics.py  run_grouped_metrics.py  run_grouped_truth_metrics.py  run_gt_table_metrics.py  run_metrics.py  run_seasonal_table_metrics.py  run_spatial_metrics.py  run_station_table_metrics.py  run_table_metrics.py
salient_scripts/: salient_validation_exercise.ipynb  simple_salient_validation_exercise.ipynb
sheerwater-benchmarking/: README.md  pyproject.toml
sheerwater-benchmarking/src/sheerwater_benchmarking/: __init__.py
sheerwater_benchmarking/: __init__.py  climatology.py  data.py  data_transforms.py  masks.py  metric_factory.py  metric_library.py  metrics.py  metrics_library.py  statistics_library.py  tasks.py
sheerwater_benchmarking/baselines/: __init__.py  climatology.py  ecmwf.py
sheerwater_benchmarking/climatology/: __init__.py  climatology.py
sheerwater_benchmarking/data/: __init__.py  chirps.py  ecmwf.py  era5.py  ghcn.py  imerg.py  masks.py  stage_iv.py  tahmo.py
sheerwater_benchmarking/forecasts/: Untitled.ipynb  __init__.py  abc.py  ecmwf.py  ecmwf_er.py  ecmwf_er_iri.py  ecmwf_hres.py  fuxi.py  gefs.py  gencast.py  graphcast.py  neuralgcm.py  s2s_iri.py  salient.py
sheerwater_benchmarking/models/: __init__.py  salient.py
sheerwater_benchmarking/reanalysis/: __init__.py  cbam.py  era5.py  era5_cds.py  salient.py  salient_era5.py
sheerwater_benchmarking/tasks/: __init__.py  spw.py  tasks.py
sheerwater_benchmarking/tests/: conftest.py  test_basic_caching.py  test_caching.py  test_climatology.py  test_deep_cache.py  test_emcwf.py  test_forecast_validity.py  test_forecasts.py  test_lead_generation.py  test_masks.py  test_metrics.py  test_postgres_caching.py  test_precip_range.py  test_spw.py  test_tabular_caching.py  test_target_dates.py  test_terracotta.py  test_upsert.py  test_utils.py  test_weather_utils.py
sheerwater_benchmarking/tests/metrics/: test_metric_correctness.py  test_metrics.py
sheerwater_benchmarking/utils/: __init__.py  caching.py  data_utils.py  general_utils.py  model_utils.py  region_defs.py  remote.py  secrets.py  space_utils.py  task_utils.py  time_utils.py  variable_utils.py  weather_utils.py
sheerwater_benchmarking/verification/: verify.py
src/sheerwater_benchmarking/: data.py  storage_test.py
src/sheerwater_benchmarking/utils/: .remote.py.swp  caching.py  data_utils.py  remote.py  secrets.py
tools/: __init__.py  cache-cli.py  cache-delete.py  cache-list.py  cache-rename.py  cache.py  cache_utils.py  cog-terracotta-test.py  copy_imerg.py  create-and-notebook.sh  create-and-run.sh  create-coiled-software-environment.py  fuxi-download.py  fuxi-run-par.py
tools/load_testing/: README.md  terracotta.jmx
(+1 files in other folders)
