[tool.autopep8]
max_line_length = 100

[tool.ruff]
# Enable the pycodestyle (`E`) and Pyflakes (`F`) rules by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
# Enable all `pydocstyle` rules, limiting to those that adhere to the
# Google convention via `convention = "google"`, below.
select = ["E", "F", "W", "D", "ARG"]
ignore = [
  "E722", # bare except
]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
  ".dist",
  ".env",
  ".git",
  ".git-rewrite",
  ".github",
  ".ipynb_checkpoints",
  ".ruff_cache",
  ".venv",
  "__pycache__",
  "__pypackages__",
]

line-length = 100

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

target-version = "py38"

[tool.ruff.pydocstyle]
convention = "google"

[project]
name = "sheerwater-benchmarking"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Joshua Adkins", email = "josh@nline.io" }
]
dependencies = [
    "dask==2024.7.0",
    "dask[complete]",
    "coiled",
    "numpy==1.26",
    "httplib2",
    "s3fs",
    "google-api-python-client",
    "proto-plus==1.24.0.dev1",
    "google-cloud-storage",
    "google-cloud-secret-manager",
    "cryptography",
    "ipykernel",
    "jupyterlab",
    "xarray",
    "matplotlib",
    "geopandas",
    "rioxarray",
    "notebook",
    "jupytext",
    "dask-kubernetes>=2024.5.0",
    "gcsfs",
    "zarr",
    "h5py",
    "netcdf4",
    "h5netcdf",
    "scipy",
    "requests",
    "ecmwf-api-client",
    "cdsapi",
    "dateparser>=1.2.0",
    "bokeh",
    "flox",
    "ruff>=0.5.7",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sheerwater_benchmarking"]
