[project]
name = "sheerwater-benchmarking"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Joshua Adkins", email = "josh@nline.io" }
]
dependencies = [
    "dask==2024.7.0",
    "ipykernel>=6.29.5",
    "jupyterlab>=4.2.3",
    "gcloud>=0.18.3",
    "xarray>=2024.6.0",
    "gcsfs>=2024.6.1",
    "netcdf4>=1.7.1.post1",
    "h5netcdf>=1.3.0",
    "matplotlib>=3.9.1",
    "geopandas>=1.0.1",
    "rioxarray>=0.16.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sheerwater_benchmarking"]
